# operations-debs-contenttranslation-apertium-eo-ca

./: Makefile.am  README  apertium-eo-ca.ca-eo.antaux2_t2x  apertium-eo-ca.ca-eo.antaux_t2x  apertium-eo-ca.ca-eo.t1x  apertium-eo-ca.ca-eo.t2x  apertium-eo-ca.ca.acx  apertium-eo-ca.ca.dix  apertium-eo-ca.eo.dix  apertium-eo-ca_0.9.1~r60655.orig.tar.gz.delta  apertium-eo-ca_0.9.1~r60655.orig.tar.gz.id  comptar_dix.sh  configure.ac  inconsistency.sh  kompletigu_eo_dix.sh  krei_monodix.pl  modes.xml  nova_versio.sh  outstanding-tests.sh  retraduku.sh
debian/: changelog  control
lexic/: Gentilicis dels Municipis de Catalunya (2009).xls  Gentilicis_CatNord.xls  Gentilicis_Comarques_Catalunya_0.xls  Gentilicis_EuropaEstatCap.xls  Gentilicis_Illes Balears.xls  cognoms.txt  gentilicis_mon.txt  municipis_val.txt  nomenclator-1227815914.xls  nomenclator-1477607127.xls  nomenclator-1620764499.xls  nomenclator-51471523.xls  nomenclator-785101799.xls  nomenclator-834856909.xls  nomenclator-861847075.xls  nomenclator-984718478.xls  noms.txt
tekstaro/: ca.crp.txt  indymedia.txt
